# game-generator

./: .gitignore  Cargo.toml  PR_FIXES.md  QUICK_FIX.md  README.md  SUMMARY.md  test_llm.rs
.cursor/: Dockerfile
.cursor/rules/: vintage-generator.mdc
.github/: copilot-instructions.md
.github/workflows/: cd.yml  ci.yml  docs-push.yml  docs.yml  rust.yml
bevy-combat/: Cargo.toml
bevy-combat/src/: damage.rs  effects.rs  lib.rs  progression.rs  state.rs
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/development/: contributing.md
memory-bank/: activeContext.md  asset-optimization-and-prompt-capture.md  background-agent-instructions.md  backgroundAgentActiveContext.md  cascade-review-system-design.md  critical-missing-pieces.md  ecosystem-leverage-summary.md  execution-plan-1.0.md  final-summary-2025-12-25.md  productContext.md  progress-2025-12-25-07-30.md  progress.md  projectbrief.md  rust-to-python-equivalents.md  supplemental.md  systemPatterns.md  techContext.md  triage-2025-12-25.md  vintage-game-generator-vision-python.md  vintage-game-generator-vision.md
memory-bank/python-migration-analysis/: 00-executive-summary.md  01-python-architecture.md  02-library-selection.md  03-ui-ux-implementation.md  04-metaprompt-system.md  05-feature-implementation.md  06-distribution-strategy.md  07-migration-roadmap.md  08-conclusion.md  10-day-one-implementation.md  (+2 more)
scripts/: README.md  verify-ci-setup.sh
vintage_ai_client/: Cargo.toml
vintage_blending_core/: Cargo.toml
vintage_build_tools/: Cargo.toml
vintage_game_generator/: Cargo.toml
(+65 files in other folders)
