[package]
name = "bevy-combat"
version = "0.1.0"
edition = "2024"
authors = ["Jon Bogaty <jon@jonbogaty.com>"]
description = "Generic combat systems for Bevy games"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
rand = "0.8"
